# AEDA

./: README.md
1st semester/MNUM/all_algs/: diff_eq_system.py  first_order_odes.py  gaussian_elimination.py  integration_methods.py  minimization.py  (+2 more)
2nd semester/CGRA/: README.md
2nd semester/SOPE/: coiso.c.txt
AEDA/aeda-proj-master/: .gitignore  CMakeLists.txt
AEDA/aeda-proj-master/docs/: Doxyfile
AEDA/aeda-proj-master/docs/output/html/: _person_8h_source.html  annotated.html  class_book.html  class_member-members.html  class_non_member.html  class_person-members.html  class_person.html  files.html  functions_func.html  functions_vars.html  index.html
AEDA/aeda-proj-master/docs/output/html/search/: all_10.js  all_11.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_a.js  variables_b.js  variables_c.js  variables_d.js  variables_e.js
AEDA/aeda-proj-master/src/: main.cpp
AEDA/aeda-proj-master/src/Book/: Book.cpp  Book.h
AEDA/aeda-proj-master/src/Club_BookStore/: BookStore.cpp  Club.cpp
AEDA/aeda-proj-master/src/Exception/FileException/: FileException.h
AEDA/aeda-proj-master/src/Files/: Info.txt  People.txt
AEDA/aeda-proj-master/src/Person/: Person.cpp
AEDA/aeda-proj-master/src/UI/: UI.h
AEDA/aeda-proj-master/src/Utils/: utils.cpp  utils.h
(+126 files in other folders)
